Update poster and index page: poster is simplified and article section is added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="./index.css" rel="stylesheet" type="text/css" media="all">
+
+    <style>
+      a {
+        text-decoration: none;
+        color: initial;
+      }
+
+      a#we {
+        font-weight: 700;
+        font-size: 2em;
+
+        position: fixed;
+        bottom: 0;
+        right: 0;
+      }
+    </style>
   </head>
   <body>
     <h1 id="title">이동규</h1>
@@ -21,6 +37,10 @@
       ,
       그리고 <a href="https://neworder.xyz">새로운질서</a> 와 함께합니다.
     </p>
+
+    <a id="we" href="./poster.html">
+      <img src="./images/favicon.svg" width="24" height="24" />
+    </a>
 
     <script src="./index.js" ></script>
   </body>
