Update index page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The web site of justin-neocity-blah</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>새로운 나</title>
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
-    <link href="./index.css" rel="stylesheet" type="text/css" media="all">
+    <link href="./index.css" rel="stylesheet" type="text/css" media="all" />
 
     <style>
       a {
@@ -26,22 +26,21 @@
     </style>
   </head>
   <body>
-    <h1 id="title">이동규</h1>
+    <div class="container">
+      <p id="intro-paragraph">
+        <span>
+          <a href="https://taupe-kringle-b8f053.netlify.app/">이동규</a>는
+          <a href="https://cylee.neocities.org">이채영</a>,
+          <a href="https://yoojiually.neocities.org">유지율</a>, 그리고
+          <a href="https://neworder.xyz">새로운 질서</a>와 함께합니다.
+        </span>
+      </p>
 
-    <p id="intro-paragraph">
-      <a href="https://taupe-kringle-b8f053.netlify.app/">이동규</a>
-      는 
-      <a href="https://cylee.neocities.org">이채영</a>
-      ,
-      <a href="https://yoojiually.neocities.org">유지율</a>
-      ,
-      그리고 <a href="https://neworder.xyz">새로운질서</a> 와 함께합니다.
-    </p>
+      <a id="we" href="./stranger.html">
+        <img src="./images/favicon.svg" width="24" height="24" />
+      </a>
 
-    <a id="we" href="./poster.html">
-      <img src="./images/favicon.svg" width="24" height="24" />
-    </a>
-
-    <script src="./index.js" ></script>
+      <script src="./index.js"></script>
+    </div>
   </body>
 </html>
