--- a/stranger.html
+++ b/stranger.html
@@ -11,7 +11,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard-dynamic-subset.css"
     />
     <link rel="stylesheet" href="./poster.css" />
-    <link rel="stylesheet" href="./poster-articles.css" />
+    <link rel="stylesheet" href="./stranger.css" />
     <link rel="icon" type="image/x-icon" href="./images/favicon.svg" />
 
     <title>낯선 이</title>
